Almost finished writing about defining signatures

--- a/acg.tex
+++ b/acg.tex
@@ -5,6 +5,7 @@ system. Abstract categorial grammars are built upon two mathematical
 structures, \emph{(higher-order) signatures} and \emph{lexicons}.
 
 \subsubsection{Higher-order signatures}
+\label{sssec:sig}
 
 A \textbf{higher-order signature} is a set of elements that we call
 \emph{constants}, each of which is associated with a type. Formally, it
@@ -273,6 +274,7 @@ i.e. it contains only terms which denote strings that spell out
 sentences of our fragment of English.
 
 \subsubsection{Example semantic lexicon}
+\label{sssec:acg-sem}
 
 One perk of working with abstract categorial grammars is that one
 abstract term can be interpreted multiple ways, using different
