--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{gb4e}
 \usepackage{bussproofs}
 \usepackage{hyperref}
+\usepackage[yyyymmdd,hhmmss]{datetime}
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
@@ -16,6 +17,8 @@
 \author{Ji\v{r}\'{i} Mar\v{s}\'{i}k}
 \title{Master Thesis}
 \maketitle
+
+\currenttime
 
 \tableofcontents
 
