Finished writing 'Defining signatures'

--- a/acg.tex
+++ b/acg.tex
@@ -1,4 +1,5 @@
 \subsection{Abstract Categorial Grammars}
+\label{ssec:acg}
 
 We present the grammatical framework in which we will develop our
 system. Abstract categorial grammars are built upon two mathematical
