--- a/my-work-rewritten.tex
+++ b/my-work-rewritten.tex
@@ -171,7 +171,7 @@ reconstructed as the domain of $\tau$ and the set $A$ is just the set of
 all atomic types occurring in the range of $\tau$. Therefore, to define
 the signature $\mathopen{<}A, C, \tau\mathclose{>}$, it is enough to
 provide the function $\tau$, which in its set-theoretical realization is
-just a set of pairs.  In relational programming, a set can be easily
+just a set of pairs. In relational programming, a set can be easily
 encoded as a unary relation that answers the membership test. Therefore,
 our goal will be to construct to answer this relation and this relation
 will be our final representation of a signature.
@@ -249,12 +249,12 @@ an example of a lexical constant in Figure~\ref{fig:lex-const}.
 \begin{figure}
   % TODO: Center this.
   \centering
-  \begin{verbatim}
+\begin{verbatim}
 {:type [-> NP [-> NP S]]
  :id {:lex-entry {:wordform "loves"
                   :hypertag ...}
       :spec {:scope :subject-wide}}}
-  \end{verbatim}
+\end{verbatim}
   \caption{\label{fig:lex-const} An example of a lexical constant from a
     hypothetical syntactic signature (the hypertag is elided for brevity).}
 \end{figure}
@@ -284,15 +284,14 @@ from~\ref{sssec:example-sig} using the \texttt{ht->typer} abstraction.
 
 \begin{figure}
   \centering
-  \begin{verbatim}
+\begin{verbatim}
 (ht->typer {{:head {:cat "n"}}      'N
             {:head {:cat "v"
                     :trans "true"}} (-> 'NP 'NP 'S)
             {:head {:cat "det"}}    (-> 'N (-> 'NP 'S) 'S)})
-  \end{verbatim}
+\end{verbatim}
   \caption{\label{fig:lex-sig-impl} A lexicalized version of the
-    $\Sigma$%_{Synt} TODO TODO TODO
-    signature from~\ref{sssec:example-sig}.}
+    $\Sigma$(\_{Synt}) signature from~\ref{sssec:example-sig}.}
 \end{figure}
 
 In the above paragraphs, we have been referring to the constants that we
@@ -311,10 +310,10 @@ constant from a semantic signature.
 
 \begin{figure}
   \centering
-  \begin{verbatim}
+\begin{verbatim}
 {:type [-> T [-> T T]]
  :id {:constant-name and?}}
-  \end{verbatim}
+\end{verbatim}
   \caption{\label{fig:nonlex-const} An example of the representation of
     a non-lexicalized constant (the conjunction operator in a semantic
     signature).}
@@ -333,14 +332,14 @@ manner, see Figure~\ref{fig:example-sig-impl}.
 
 \begin{figure}
   \centering
-  \begin{verbatim}
+\begin{verbatim}
 (nonlex-sigr {'and?    (-> 'T 'T 'T)
               'imp?    (-> 'T 'T 'T)
               'forall? (-> (=> 'E 'T) 'T)
               'exists? (-> (=> 'E 'T) 'T)})
-  \end{verbatim}
+\end{verbatim}
   \caption{\label{fig:nonlex-sig-impl} A signature of non-lexical
-    constants belonging to $\Sigma$%_{Synt}
+    constants belonging to $\Sigma$(\_{Sem})
     from~\ref{sssec:acg-sem}. The single arrow \texttt{->} corresponds
     to linear implication while the double arrow \texttt{=>} corresponds
     to intuitionistic implication.}
@@ -348,7 +347,7 @@ manner, see Figure~\ref{fig:example-sig-impl}.
 
 \begin{figure}
   \centering
-  \begin{verbatim}
+\begin{verbatim}
 (def synt-sig
   (ht->typer {{:head {:cat "n"}}      'N
               {:head {:cat "v"
@@ -367,7 +366,7 @@ manner, see Figure~\ref{fig:example-sig-impl}.
        (ht->typer {{:head {:cat "n"}}      (-> 'E 'T)
                    {:head {:cat "v"
                            :trans "true"}} (-> 'E 'E 'T)})))
-  \end{verbatim}
+\end{verbatim}
   \caption{\label{fig:example-sig-impl} The definition of the
     lexicalized versions of the example signatures of
     subsection~\ref{ssec:acg}.}
@@ -375,6 +374,100 @@ manner, see Figure~\ref{fig:example-sig-impl}.
 
 \subsubsection{Defining lexicons}
 
+We have explained how we can use elements of our lexical database to
+define signatures. Now, we will turn to lexicons. Similar to how we
+reduced signatures from the formal triples $\mathopen{<}A, C,
+\tau\mathclose{>}$ to just the type assignment function $\tau$, we can
+similarly reduce lexicons from the pairs $\mathopen{<}F, G\mathclose{>}$
+to only $G$, the part which operates on terms. $F$, or at least its
+relevant subset, can be easily retrieved by putting the types of the
+abstract constants side-by-side with the types of their object terms to
+get a sufficient subset of $\hat{F}$ and finding $F$, the mapping from
+atomic abstract types whose homomorphic extension includes $\hat{F}$.
 
+In our relational framework, a mapping is most directly represented as a
+binary relation, which is the representation that we have chosen. In the
+previous subsubsection, we talked a lot about how individual entries in
+the lexical database generate the items of a signature. Solving the
+problem for signatures also solved it for lexicons, since their
+structure is very similar: a signature is a set of pairs of constants
+and types, a lexicon is a set of pairs of constants and
+terms. Therefore, a lexical entry contributes the object terms for the
+constants which it generated in the abstract signature.
+
+Our representation of lexical constants was purposefully engineered so
+as to make the lexical entry directly accessible to the lexicon
+implementation. This way, the lexicon author can inspect the hypertag
+and the wordform of the lexical entry, the specifier of the concrete
+constant that it is mapping right now and even the type she assigned to
+the constant in the abstract signature to allow her to choose the
+correct object term. Furthermore, since lexicons are still
+relations/sets, we can compose them together by disjunction. See
+Figure~\ref{lex-impl} for the implementation of the lexicalized versions
+of the $\mathcal{L}_{Syntax}$ and $\mathcal{L}_{Sem}$ lexicons.
+
+\begin{figure}
+  \centering
+\begin{verbatim}
+(defn syntax-lexo
+  [synt-constant string-term]
+  (with-sig-consts string-sig
+    (l/fresh [hypertag string-constant]
+      (has-hypertago synt-constant hypertag)
+      (share-lex-entryo synt-constant string-constant)
+      (string-sig string-constant)
+      (fs-assigne hypertag string-term
+                  {:head {:cat "n"}}
+                  ,(rt string-constant)
+                  {:head {:cat "v"
+                          :trans "true"}}
+                  ,(rt (ll [x y] (++ (++ x string-constant) y)))
+                  {:head {:cat "det"}}
+                  ,(ll [x R] (R (++ ua-stx-constant x)))))))
+
+(defn sem-lexo
+  [synt-constant sem-term]
+  (with-sig-consts sem-sig
+    (l/fresh [hypertag sem-constant]
+      (has-hypertago synt-constant hypertag)
+      (l/conde [(share-lex-entryo synt-constant sem-constant)
+                (sem-sig sem-constant)
+                (fs-assigne hypertag sem-term
+                            {:head {:cat "n"}}
+                            ,(rt sem-constant)
+                            {:head {:cat "v"
+                                    :trans "true"}}
+                            ,(rt sem-constant))]
+               [(fs-assigne hypertag sem-term
+                            {:head {:cat "det"
+                                    :det_type "indef"}}
+                            ,(rt (ll [p q] (exists? (il [x] (and? (p x)
+                                                                  (q x))))))
+                            {:head {:cat "det"
+                                    :det_type "def"}}
+                            ,(rt (ll [p q] (forall? (il [x] (imp? (p x)
+                                                                  (q x)))))))]))))
+
+\end{verbatim}
+  \caption{\label{fig:lex-impl} The implementation of the lexicons from
+    subsection~\ref{ssec:acg}. NOTE: This is too verbose both to put on
+    the paper and also to code. These examples demonstrates two common
+    and related shapes of lexicons. The $\mathcal{L}$(\_{Syntax}) and
+    the first half of the $\mathcal{L}$(\_{Sem}) are lexicalized, in the
+    sense that the object term contains a lexical constant with the same
+    lexical entry as the abstract constant.\footnote{This notion of
+      ``lexicalized'' is quite different to the one I use in the rest of
+      the thesis so far (which roughly means ``generated by a lexical
+      database'') and also different from the one used by Kanazawa
+      (FIX!).} This means that before constructing the object term, we
+    have to acquire the object constant that is contained in the term
+    and then we just fit it in of the recipes, which we choose according
+    to the hypertag. The second half of $\mathcal{L}$(\_{Sem}) simply
+    assigns object terms based on the hypertag. A more concise and
+    desirable implementation would allow us simply write the pairs of
+    hypertags and object terms (recipes encoded as lambdas). My plan is
+    to have exactly this, but I have not thought yet about how to split
+    the various aspects into different reusable abstractions.}
+\end{figure}
 
 \subsection{Testing signatures and lexicons}
