Talked about the 3 mechs and their naive combo

--- a/ig.tex
+++ b/ig.tex
@@ -157,6 +157,7 @@ superposing the EPTDs of $la$ and $voit$ by merging the nodes (1,2) and
 \end{figure}
 
 \subsubsection{Frigram, an interaction grammar}
+\label{sssec:frigram}
 
 The reason we are interested in interaction grammars is because of the
 existence of Frigram, a large scale grammar of French which is
