Added remark about "de" and NP_VAR

--- a/the-last-part.tex
+++ b/the-last-part.tex
@@ -266,14 +266,16 @@ $$
 E_{le_3} : N \limp ((NP\_VAR{=}F \limp S\_EXT{=}EMB) \limp S\_EXT{=}EMB)
 $$
 
-While we have introduced the notion of an $NP\_VAR{=}T$ for describing
-traces, we can cover another element of our fragment, the preposition
-$de$, and enforce the constraint that $qui$/$que$ cannot extract
-prepositional complements.
-
-$$
-E_{de} : NP\_VAR{=}F \limp N \limp N
-$$
+%% Maybe not do this here and mention it in the intersection of grammars.
+%
+%While we have introduced the notion of an $NP\_VAR{=}T$ for describing
+%traces, we can cover another element of our fragment, the preposition
+%$de$, and enforce the constraint that $qui$/$que$ cannot extract
+%prepositional complements.
+%
+%$$
+%E_{de} : NP\_VAR{=}F \limp N \limp N
+%$$
 
 Given this type system, we can assign the type $S\_EXT{=}NO$ to the term
 expressing the syntactic structure of (\ref{ex:good-ext}) but we cannot
