--- a/the-last-part.tex
+++ b/the-last-part.tex
@@ -810,5 +810,8 @@ type and the intersection of all its parents' languages.
 TODO: In the previous paragraph, add a notice saying that the terms must
 be also built on the signature of the node.
 
+TODO: Use the correct term arborescence in the above paragraphs!
+% http://en.wikipedia.org/wiki/Arborescence_(graph_theory)
+
 We will now turn to a formal definition of this generalized graph-based
 formalism and discuss some its values and properties.
